Fri Jun 10 15:47:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

		* ace/OS_NS_dlfcn.inl:
		  Fixed VxWorks implementation of dlopen().

Fri Jun 10 07:55:32 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:
          Added new test for Alternate IIOP addresses.

Fri Jun 10 13:16:53 2005  Simon McQueen  <sm@prismtech.com>

        * ace/Reactor.cpp (register_handler):

          Backed out Thu Jun  9 11:12:39 2005  Steve Huston.
          It was causing test failures on Linux.

Fri Jun 10 06:43:25 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Interpret flag_overrides of the custom_types->dependent setting
          as an array instead of a string.  This makes things consistent
          with non-overridden values of dependent.

        * bin/create_ace_build:
        * bin/create_ace_build.pl:

          Inform users about using $MPC_ROOT/clone_build_tree.pl instead of
          these scripts.

        * bin/depgen.pl:

          Simplified/collapsed duplicated code from the VMS additions.

Thu Jun  9 18:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event.h:
          Doxygen improvements

        * bin/MakeProjectCreator/config/codecfactory.mpb:
          New base project for the new codecfactory for TAO

Thu Jun  9 18:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added tao/tests/POA/Reference_Counting

Thu Jun  9 11:47:31 2005  Steve Huston  <shuston@riverace.com>

        * tests/Pipe_Test.cpp: Fixed wide-char text issues.

Thu Jun  9 11:12:39 2005  Steve Huston  <shuston@riverace.com>

        * ace/Reactor.cpp (register_handler): When registering for one or more
          signals, set the event handler's reactor() pointer to the registered
          reactor. Makes this behavior consistent with all other registration
          types.
